--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <!-- code from https://www.youtube.com/watch?v=on_OrrX7Nw4 -->
     <!-- "Text Spinner - Android Studio Tutorial" by Coding in Flow-->
+    <!-- resource for hair option spinner -->
     <string-array name="hairs">
         <item>Bald</item>
         <item>Bob Cut</item>
