--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="red">Red</string>
     <string name="green">Green</string>
     <string name="blue">Blue</string>
+    <string name="hair">Hair</string>
+    <string name="eyes">Eyes</string>
+    <string name="skin">Skin</string>
 
     <!-- code from https://www.youtube.com/watch?v=on_OrrX7Nw4 -->
     <!-- "Text Spinner - Android Studio Tutorial" by Coding in Flow-->
